# platform.core.appfw.librua

./: .gitignore  CMakeLists.txt  librua.manifest  project.config  rua.c  rua.pc.in
data/: rua_db.sql
debian/: changelog  control  librua-0.install.in  librua-0.postinst.in  rules
include/: db-schema.h  perf-measure.h  rua.h  rua_internal.h  rua_stat.h  rua_stat_internal.h  rua_util.h
packaging/: librua.changes  librua.spec
src/: perf-measure.c  rua.c  rua_internal.c  rua_stat.c  rua_stat_internal.c  rua_util.c
test/: CMakeLists.txt  rua-test.c
